# MMI

./: .gitignore  CMakeLists.txt  README.md
include/: DFT.h  matrix_function.h  polygon_function.h  simple_function.h  zespolona.h
src/: DFT.cpp  main.cpp  matrix_function.cpp  polygon_function.cpp  simple_function.cpp
